Update UserControllerTest.java